--- a/composer.json
+++ b/composer.json
@@ -3,30 +3,39 @@
     "description": "A Laravel package for easy importing of a configured environment.",
     "type": "library",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "Danique Wijnalda",
-            "email": "danique@van-ons.nl"
-        }
+    "keywords": [
+        "laravel",
+        "environment",
+        "import"
     ],
-    "require": {
-        "php": "^8.2",
-        "spatie/db-dumper": "^3.8",
-        "laravel/framework": ">=10"
-    },
-    "require-dev": {
-        "friendsofphp/php-cs-fixer": "dev-master",
-        "phpstan/phpstan": "2.0.x-dev",
-        "orchestra/testbench": "10.x-dev"
-    },
-    "scripts": {
-        "analyse": "vendor/bin/phpstan analyse",
-        "format": "vendor/bin/php-cs-fixer fix"
-    },
     "autoload": {
         "psr-4": {
             "VanOns\\LaravelEnvironmentImporter\\": "src/"
         }
+    },
+    "authors": [
+        {
+            "name": "Danique Wijnalda",
+            "email": "danique@van-ons.nl"
+        },
+        {
+            "name": "Van Ons",
+            "email": "opensource@van-ons.nl"
+        }
+    ],
+    "require": {
+        "php": "^8.0",
+        "laravel/framework": ">=10",
+        "spatie/db-dumper": "^3.8"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.64",
+        "orchestra/testbench": "^7.0|^8.17|^9.0",
+        "phpstan/phpstan": "^1.12|^2.0"
+    },
+    "scripts": {
+        "analyse": "vendor/bin/phpstan analyse",
+        "fix": "vendor/bin/php-cs-fixer fix"
     },
     "extra": {
         "laravel": {
@@ -35,5 +44,9 @@
             ]
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "config": {
+        "sort-packages": true
+    }
 }
